<resources>
    <string name="app_name">Jakes Soundboard</string>
    <string name="oooff">Oooff</string>
    <string name="big_oooff">Big OOOFF</string>
    <string name="what_can_ya_do">What Can Ya Do?</string>
    <string name="not_much_aye">Not Much Aye!</string>
    <string name="pez">PEZ</string>
    <string name="stop">Stop</string>
    <string name="thank_you_for_downloading_my_app_now_enjoy_you_sexy_people">Thank you for downloading my app, now enjoy you sexy people!</string>
    <string name="beat_boxing">Beat boxing</string>
</resources>
