<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/tinderphoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="#00FFFFFF"
        android:scaleType="fitXY"
        android:translationX="0dp"
        android:translationY="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tinderlogo" />

    <Button
        android:id="@+id/oooffbtn"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded__button_red"
        android:text="@string/oooff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/bigoooffbtn"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded__button_red"
        android:singleLine="false"
        android:text="@string/big_oooff"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <Button
        android:id="@+id/littleoooff"
        android:layout_width="113dp"
        android:background="@drawable/rounded__button_red"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="Little oooff"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/eating"
        android:layout_width="113dp"
        android:background="@drawable/rounded__button_red"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="Eating"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/beatbox"
        android:layout_width="113dp"
        android:background="@drawable/rounded__button_red"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="Beatbox 1"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <Button
        android:id="@+id/beatbox4"
        android:layout_width="113dp"
        android:background="@drawable/rounded__button_red"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="Beatbox 4"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <Button
        android:id="@+id/WCYDbtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded__button_red"
        android:singleLine="false"
        android:text="What Can Ya &#10;Do?"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/NMAbtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded__button_red"
        android:singleLine="false"
        android:text="@string/not_much_aye"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <Button
        android:id="@+id/PEZbtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded__button_red"
        android:singleLine="false"
        android:text="@string/pez"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/drinking"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded__button_red"
        android:singleLine="false"
        android:text="Drinking"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/Beatbox2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded__button_red"
        android:singleLine="false"
        android:text="Beatbox 2"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <Button
        android:id="@+id/Beatbox5"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded__button_red"
        android:singleLine="false"
        android:text="Beatbox 5"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />


    <Button
        android:id="@+id/hey"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded__button_red"
        android:singleLine="false"
        android:text="Hey there"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/chuckle"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded__button_red"
        android:singleLine="false"
        android:text="Chuckle"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <Button
        android:id="@+id/moan"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded__button_red"
        android:singleLine="false"
        android:text="Moan"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />
    <Button
        android:id="@+id/moan2"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded__button_red"
        android:singleLine="false"
        android:text="Moan 2"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/Beatbox3"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded__button_red"
        android:singleLine="false"
        android:text="Beatbox 3"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <Button
        android:id="@+id/Beatbox6"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded__button_red"
        android:singleLine="false"
        android:text="Beatbox 6"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />


    <Button
        android:id="@+id/stopbtn"
        android:layout_width="122dp"
        android:layout_height="72dp"
        android:background="#DCF12A2A"
        android:singleLine="false"
        android:text="@string/stop"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

</androidx.constraintlayout.widget.ConstraintLayout>